  * rtcontrol: renamed option "--view" into "--to-view"
  * rtcontrol: added option "--from-view" (default is still "main")
  * rtcontrol: exit with return code 44 when the selection is empty
    (think "404 NOT FOUND", but then exit codes should be < 256)
  * Added common --cron option that activates logging into the file
    ./log/cron.log in the configuration directory

 -- pyroscope <pyroscope.project@gmail.com>  Mon, 30 Aug 2010 00:12:30 +0200

pyroscope (0.3.6) hardy; urgency=low

  * lstor: Added "-o" option to select output fields
  * rtcontrol: Print XMLRPC statistics when in verbose mode
  * rtcontrol: Added --view-only and --view=NAME options
  * rtcontrol: Added --custom KEY=VALUE option (set custom_KEY field)
  * rtcontrol: Added field "started" (time of first start)
  * rtcontrol: Added field "leechtime" (completed-started, if applicable)
  * rtcontrol: Added field "seedtime" (seedtime after completion)
  * rtcontrol: Added field "kind" as a taglist
  * rtcontrol: Added field "files" with a glob filter that matches any
    path in the filelist
  * rtcontrol: Added default output format "files"
  * rtcontrol: --help-fields now also lists format specifiers
  * rtxmlrpc: Added --repr option
  * Added "OR" to allow multiple alternative top-level condition sets
    on one command line (note it must actually be uppercase)
  * Tagged filters now allow exact matching by adding a leading '=',
    e.g. kind==mkv (only "mkv", nothing else)
  * File extension percentages are cached into the field "custom_kind"
  * New format specifiers:
      mtime         Modification time of a path.
      pathbase      Base name of a path.
      pathdir       Directory containing the given path.
      pathext       Extension of a path (including the '.').
      pathname      Base name of a path, without its extension.
  * Support for custom_1 to custom_5 (these are special in rTorrent)
  * Added [XMLRPC] section to "config.ini" so that any method name used