@@ -13,13 +13,6 @@ engine = pyrocore.torrent.rtorrent:RtorrentEngine
 # Location of your rtorrent configuration
 rtorrent_rc = ~/.rtorrent.rc
 
-# The default output format for listing
-output_format = \  $(name)s {$(alias)s, $(completed)s}
-                \    $(is_private)s $(is_open)s $(is_active)s P$(prio)d  $(done)5.1f%%%%%%%%  R:$(ratio)6.2f  SZ:$(size.sz)s  U:$(up.sz)s/s  D:$(down.sz)s/s T:$(throttle)s  $(message)s
-
-# The default output format for actions
-action_format = $(now.iso)16.16s $(action)8s $(name)s {$(alias)s}
-
 # How often to repeat headers when --column-headers is used
 output_header_frequency = 30
 
@@ -37,11 +30,20 @@ custom_field_factories =
 
 
 [FORMATS]
+# The default output format of the result list
+default     = \  $(name)s {$(alias)s, $(completed)s}
+                \    $(is_private)s $(is_open)s $(is_active)s P$(prio)d  $(done)5.1f%%%%%%%%  R:$(ratio)6.2f  SZ:$(size.sz)s  U:$(up.sz)s/s  D:$(down.sz)s/s T:$(throttle)s  $(message)s
+
+# The default output format for actions
+action      = $(now.iso)16.16s $(action)8s $(name)s {$(alias)s}
+action_cron = $(action)s $(name)s {$(alias)s}
+
 # Custom output formats
-completion = $(completed.raw.delta)13.13s $(leechtime)9.9s $(seedtime)9.9s $(is_open)4.4s $(up.sz)10s/s $(ratio.pc)5d$(pc)s $(alias)-8s $(kind_50)-4.4s  $(realpath.pathbase)s
-short      = $(completed)-16.16s $(size.sz)10s $(uploaded.sz)10s $(ratio.pc)5d$(pc)s $(alias)-8s $(name)s
-files      = $(is_active)-6s $(completed)s $(size.sz)s $(name)s {$(alias)s}
-             $(files)s [$(custom_kind)s]\n
+completion  = $(completed.raw.delta)13.13s $(leechtime)9.9s $(seedtime)9.9s $(is_open)4.4s $(up.sz)10s/s $(ratio.pc)5d$(pc)s $(alias)-8s $(kind_50)-4.4s  $(realpath.pathbase)s
+short       = $(completed)-16.16s $(size.sz)10s $(uploaded.sz)10s $(ratio.pc)5d$(pc)s $(alias)-8s $(name)s
+files       = $(is_active)-6s $(completed)s $(size.sz)s $(name)s {$(alias)s}
+              $(files)s [$(custom_kind)s]\n
+
 
 # TODO: defaults loaded from package data need triple(!) escaping - this has to be fixed!
 ;percent1   = $(alias)s %%       $(name)s
